--- a/index.html
+++ b/index.html
@@ -2,18 +2,11 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link rel="icon" href="favicon.png">
-        <link rel="stylesheet" href="style.css">
-        <script src="renderer.js"></script>
-        <script src="main.js"></script>
+        <link rel="icon" href="assets/media/favicon.png">
+        <link rel="stylesheet" href="assets/styles/default.css">
     </head>
-    <body onload="main()">
-        <h1>Pendulum Simulation</h1>
-        <div id="sandbox" class="sandbox">
-            <canvas id="surface" class="surface" width="800" height="800"></canvas>
-            <div id="overlay" class="overlay">
-                <h6>Lorem Ipsum</h6>
-            </div>
-        </div>
+    <body>
+        <h1>Index</h1>
+        <h3><a href="physics/devdemo0.html">devdemo0</a></h3>
     </body>
 </html>
