--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
         <meta charset="UTF-8">
         <link rel="icon" href="assets/media/favicon.png">
         <link rel="stylesheet" href="assets/styles/default.css">
