--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <body>
         <h1>Index</h1>
         <h3><a href="physics/devdemo0.html">devdemo0</a></h3>
+        <h3><a href="physics/devdemo1.html">devdemo1</a></h3>
     </body>
 </html>
