--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
         <h1>Index</h1>
         <h3><a href="physics/devdemo0.html">devdemo0</a></h3>
         <h3><a href="physics/devdemo1.html">devdemo1</a></h3>
+        <h3><a href="physics/devdemo2.html">devdemo2</a></h3>
     </body>
 </html>
