--- a/physics/devdemo0.html
+++ b/physics/devdemo0.html
@@ -9,11 +9,11 @@
         <script>
             const dt = 12;
             function main() {
-                let sandbox = makeSandbox(document.getElementById("dev"));
-                let test = sandbox.makeObject(boxRenderer(75, 75), {}, {});
-                let test2 = sandbox.makeObject(sphereRenderer(75/2), {}, {});
+                let sandbox = createSandbox(document.getElementById("dev"));
+                let test = sandbox.createObject(boxRenderer(75, 75), {}, {});
+                let test2 = sandbox.createObject(sphereRenderer(75/2), {}, {});
                 let img = document.getElementById("devimg");
-                let test3 = sandbox.makeObject(textureRenderer(img, 100, 100), {}, {});
+                let test3 = sandbox.createObject(textureRenderer(img, 100, 100), {}, {});
                 sandbox.update();
 
                 let bool = false;
